--- a/FinalProject/Views/Home/Index.cshtml
+++ b/FinalProject/Views/Home/Index.cshtml
@@ -23,7 +23,7 @@
     <h1><img src="~/Content/Photos/download (1).jpg" width="100" height="60" />Champions Team Portal</h1>
 
     <p class="lead">This project has been studied and programmed by both of Rami Sulibi and Ahmad Firas Alwarea. And it reflects everything that we have learned during the ASP.NET course.</p>
-    <p><a href="git@github.com:ramisulebi93/ChampionsTeam.git" class="btn btn-primary btn-lg">To GitHub &raquo;</a></p>
+    <p><a href="git@github.com:AFirasAlwarea/FinalProject2.0.git" class="btn btn-primary btn-lg">To GitHub &raquo;</a></p>
 </div>
 
 <div id="myCarousel" class="carousel slide row img-thumbnail hidden-xs hidden-sm col-md-12" data-ride="carousel">
