--- a/FinalProject/Views/Home/Contact.cshtml
+++ b/FinalProject/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
+    Jönköping, Sweden<br />
+    
+    <abbr title="Phone">Mobile:</abbr>
+    +46.762.620287
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Personal Email:</strong>   <a href="mailto:firas.wira@gmail.com">firas.wira@gmail.com</a><br />
+    
 </address>
